updated button that was wwong

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -8,7 +8,7 @@
     <div id="graph"></div>
     <button id="start-SNARIMAX-model-button">Start snarimax model</button>
     <button id="start-holt-model-button">Start holt Model</button>
-	<button id="start-TIDE-model-button">Start holt Model</button>
+	<button id="start-TIDE-model-button">Start TIDE Model</button>
 	<input id="prediction-length" type="number" min="1" value="168">
     <script>
         var graphs = {{ graphJSON | safe }};
